--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>대구공립나무병원</title>
     <link rel="stylesheet" href="css/fullpage.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/animate-1.css">
     <link href="https://webfontworld.github.io/SCoreDream/SCoreDream.css" rel="stylesheet">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
@@ -64,7 +66,8 @@
                 <div class="introduce-bottom">
                     <h2>센터목표</h2>
                     <p><span>대구공립나무병원</span>은 수목이 건강하여 안전하고 깨끗한 도시환경을 만들어 갈 수 있도록<br>수목진단전문기관으로서 역할을 다 하도록 노력하겠습니다.</p>
-                    <div class="introduce-img">
+                    <div class="introduce-img" data-aos="fade-up"
+                    data-aos-duration="3000">
                         <img src="images/introduce-1.png" alt="상담체계" class="intro-img1">
                         <img src="images/introduce-1-1.png" alt="상담체계호버" class="intro-img1-1">
                         <img src="images/introduce-2.png" alt="관리강화" class="intro-img2">
@@ -72,7 +75,7 @@
                         <img src="images/introduce-3.png" alt="관리방안" class="intro-img3">
                         <img src="images/introduce-3-2.png" alt="관리방안호버" class="intro-img3-2">
                     </div>
-                    <div class="introduce-tex">
+                    <div class="introduce-tex" data-aos="fade-up" data-aos-duration="3500">
                         <p>수목피해<br>
                         <span>상담체계</span>를 구축</p>
                         <p>생활권 수목의<br>
@@ -103,7 +106,7 @@
                             작성 및 제출</h4>
                         <p>상담요청서에 있는 내용을<br>
                             작성한 후 피해목의 사진과 함께 제출</p>
-                        <img class="arrow1" src="images/bottom2-arrow.png" alt="화살표1">
+                        <img class="arrow1" src="images/bottom2-arrow.png" alt="화살표1" data-aos="fade-right">
                     </div>
                     <div class="bottom1-step2">
                         <h3>Step2</h3>
@@ -111,7 +114,7 @@
                         <h4>피해분석</h4>
                         <p>피해병명, 증상,<br>
                             추가피해여부 등 피해분석</p>
-                            <img class="arrow2" src="images/bottom2-arrow.png" alt="화살표2">
+                            <img class="arrow2" src="images/bottom2-arrow.png" alt="화살표2" data-aos="fade-right" data-aos-delay="300">
                     </div>
                     <div class="bottom1-step3">
                         <h3>Step3</h3>
@@ -127,7 +130,7 @@
                         <img src="images/bottom2-step1.png" alt="bottom2-step1">
                         <h4>전화 및 방문의뢰</h4>
                         <p>전화상담 및 방문상담을 통해 접수</p>
-                        <img class="arrow3" src="images/bottom2-arrow.png" alt="화살표3">
+                        <img class="arrow3" src="images/bottom2-arrow.png" alt="화살표3" data-aos="fade-right">
                     </div>
                     <div class="bottom2-step2">
                         <h3>Step2</h3>
@@ -135,7 +138,7 @@
                         <h4>출장 스케쥴 확인</h4>
                         <p>대구공립나무병원과 의뢰자간의<br>
                             스케줄 확인 및 조정</p>
-                        <img class="arrow4" src="images/bottom2-arrow.png" alt="화살표4">
+                        <img class="arrow4" src="images/bottom2-arrow.png" alt="화살표4" data-aos="fade-right" data-aos-delay="300">
                     </div>
                     <div class="bottom2-step3">
                         <h3>Step3</h3>
@@ -159,7 +162,7 @@
                 <div class="pestinfo-bottom">
                         <div class="pestinfo-bottom-wrap">
                         <ul>
-                            <li class="on"><a href="#">All</a></li>
+                            <li><a href="#">All</a></li>
                             <li><a href="#">병해정보</a></li>
                             <li><a href="#">해충정보</a></li>
                         </ul>
@@ -218,7 +221,7 @@
                         <p>대구공립나무병원 주요 관련사이트를 확인하세요.</p>
                     </div>
                     <div class="website-bottom">
-                        <div class="website-bottom-wrap">
+                        <div class="website-bottom-wrap" data-aos="zoom-in">
                             <a href="https://nifos.forest.go.kr/"><img src="images/web-1.png" alt="국립산림과학원"></a>
                             <a href="http://provin.gangwon.kr/gw/forest"><img src="images/web-2.png" alt="산림과학연구원"></a>
                             <a href="https://keumkang.chungnam.go.kr:452/"><img src="images/web-3.png" alt="충청남도산림자연연구소"></a>
@@ -311,7 +314,7 @@
             <li><a href="sub6.html"></a></li>
             <li><a href="sub7.html"></a></li>
             <img class="tree" src="images/menu-img1.png" alt="나무">
-            <img class="deagu" src="images/menu-img2.png" alt="대구광역시">
+            <img class="deagu" src="images/menu-img2.png" alt="대구광역시로고">
         </ul>
     </div>            
     <div class="bgc"></div>
