--- a/tree-hospital/index.html
+++ b/tree-hospital/index.html
@@ -106,7 +106,7 @@
                             작성 및 제출</h4>
                         <p>상담요청서에 있는 내용을<br>
                             작성한 후 피해목의 사진과 함께 제출</p>
-                        <img class="arrow1" src="images/bottom2-arrow.png" alt="화살표1" data-aos="fade-right">
+                        <img class="arrow1" src="images/bottom2-arrow.png" alt="화살표1" data-aos="fade-right"data-aos-duration="3000">
                     </div>
                     <div class="bottom1-step2">
                         <h3>Step2</h3>
@@ -114,7 +114,7 @@
                         <h4>피해분석</h4>
                         <p>피해병명, 증상,<br>
                             추가피해여부 등 피해분석</p>
-                            <img class="arrow2" src="images/bottom2-arrow.png" alt="화살표2" data-aos="fade-right" data-aos-delay="300">
+                            <img class="arrow2" src="images/bottom2-arrow.png" alt="화살표2" data-aos="fade-right" data-aos-duration="3000"data-aos-delay="300">
                     </div>
                     <div class="bottom1-step3">
                         <h3>Step3</h3>
@@ -130,7 +130,7 @@
                         <img src="images/bottom2-step1.png" alt="bottom2-step1">
                         <h4>전화 및 방문의뢰</h4>
                         <p>전화상담 및 방문상담을 통해 접수</p>
-                        <img class="arrow3" src="images/bottom2-arrow.png" alt="화살표3" data-aos="fade-right">
+                        <img class="arrow3" src="images/bottom2-arrow.png" alt="화살표3"data-aos-duration="3000" data-aos="fade-right">
                     </div>
                     <div class="bottom2-step2">
                         <h3>Step2</h3>
@@ -138,7 +138,7 @@
                         <h4>출장 스케쥴 확인</h4>
                         <p>대구공립나무병원과 의뢰자간의<br>
                             스케줄 확인 및 조정</p>
-                        <img class="arrow4" src="images/bottom2-arrow.png" alt="화살표4" data-aos="fade-right" data-aos-delay="300">
+                        <img class="arrow4" src="images/bottom2-arrow.png" alt="화살표4"data-aos-duration="3000" data-aos="fade-right" data-aos-delay="300">
                     </div>
                     <div class="bottom2-step3">
                         <h3>Step3</h3>
@@ -314,7 +314,7 @@
             <li><a href="sub6.html"></a></li>
             <li><a href="sub7.html"></a></li>
             <img class="tree" src="images/menu-img1.png" alt="나무">
-            <img class="deagu" src="images/menu-img2.png" alt="대구광역시">
+            <img class="deagu" src="images/menu-img2.png" alt="대구광역시로고">
         </ul>
     </div>            
     <div class="bgc"></div>
